# tx_firewall_v0

./: .env  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: effects.rs  lib.rs  main.rs  policy.rs  reverts.rs  state.rs  trace.rs
src/api/: handlers.rs  mod.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/chain/: mod.rs  rpc.rs
src/decode/: mod.rs
src/domain/: mod.rs
src/management/: mod.rs
src/observability/: mod.rs
src/pipeline/: mod.rs
src/safety/: mod.rs
src/util/: mod.rs
tests/: auth_audit_limits.rs  control_plane_admin.rs  decode_more_selectors.rs  decode_selectors.rs  effects_extraction.rs  milestone3_chain.rs  observability_metrics.rs  policy_confidence.rs  policy_rules.rs  rate_limits.rs  rate_limits_redis_backend.rs  rule_eth_call_no_effect.rs  safety_budgets.rs  simulation_revert.rs  slo_alerts.rs  state_transfer_checks.rs  trace_parsing.rs  v0_flow.rs
